@@ -18,7 +18,7 @@ LIB_PATCHLEVEL=4
 
 dnl libout123
 OUTAPI_VERSION=4
-OUTLIB_PATCHLEVEL=2
+OUTLIB_PATCHLEVEL=3
 
 dnl libsyn123
 SYNAPI_VERSION=1
