@@ -374,7 +374,6 @@ int write_parameters(out123_handle *ao, int who)
 	&&	GOOD_WRITEVAL(fd, ao->gain)
 	&&	GOOD_WRITEVAL(fd, ao->device_buffer)
 	&&	GOOD_WRITEVAL(fd, ao->verbose)
-	&&	GOOD_WRITEVAL(fd, ao->propflags)
 	&& !xfer_write_string(ao, who, ao->name)
 	&& !xfer_write_string(ao, who, ao->bindir)
 	)
@@ -395,7 +394,6 @@ int read_parameters(out123_handle *ao
 	&&	GOOD_READVAL_BUF(fd, ao->gain)
 	&&	GOOD_READVAL_BUF(fd, ao->device_buffer)
 	&&	GOOD_READVAL_BUF(fd, ao->verbose)
-	&&	GOOD_READVAL_BUF(fd, ao->propflags)
 	&& !xfer_read_string(ao, who, &ao->name)
 	&& !xfer_read_string(ao, who, &ao->bindir)
 	)
